# lpf

./: .clang-format  .gitignore  .gitlab-ci.yml  AGENTS.md  ARCH_REFACTOR_PLAN.md  BUGFIX_REPORT.md  BUILD_FRAMEWORK_DEPLOYMENT_REPORT.md  BUILD_FRAMEWORK_GUIDE.md  BUILD_FRAMEWORK_SUMMARY.md  BUILD_SYSTEM_OPTIMIZATION.md  CHANGELOG.md  CLAUDE.md  CLEANUP_STATUS.md  CMakeLists.txt  CONTRIBUTING.md  CURRENT_STATUS.md  Config.in  Config.in.build  Config.in.platform  DEPENDENCY_SOLUTION.md  KCONFIG_MIGRATION.md  Kconfig  Makefile  Makefile.old  Makefile.recursive  OSAL_REFACTOR_ROADMAP.md  PDM_Device_vs_Client_分析.md  PDM_架构分析文档.md  PHASE6_7_COMPLETE.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REMOVE_PDM_CONFIGS.md  RENAME_PLAN.md  RENAMING_COMPLETE.md  STEP4_IMPLEMENTATION.md  TEST_SUMMARY.md  VERIFICATION_REPORT.md  WATCHDOG_IMPLEMENTATION.md  build.py  (+10 more)
acl/: CMakeLists.txt  README.md
acl/config/H200_100P/: acl_h200_100p_invalidation.c
acl/config/demo/: acl_demo_v1.c
acl/config/pmc_v1/: acl_pmc_v1.c  acl_pmc_v1_invalidation.c
acl/include/: acl_api.h  acl_config.h  acl_telemetry_cache.h  acl_types.h  pmc_acl_types.h
acl/src/: acl_api.c  acl_telemetry_cache.c
apps/: CMakeLists.txt  Config.in  README.md
apps/docs/: USAGE_GUIDE.md
apps/led_test/: CMakeLists.txt  main.c
apps/pmc_collector/: CMakeLists.txt
apps/pmc_collector/include/: pmc_collector.h
apps/pmc_collector/src/: main.c  pmc_collector.c
apps/pmc_comm/: CMakeLists.txt
apps/pmc_comm/include/: pmc_comm.h
apps/pmc_comm/src/: pmc_comm.c
apps/pmc_health/: CMakeLists.txt
apps/pmc_health/src/: pmc_health.c
apps/pmc_logger/src/: main.c
apps/pmc_supervisor/include/: pmc_supervisor.h
apps/pmc_supervisor/src/: main.c  pmc_supervisor.c
apps/print_test/: CMakeLists.txt  print_test.c
apps/priority_dump/: Makefile  README.md  priority_dump.c
apps/priority_dump/demo/: Makefile  priority_demo.c
apps/sample_app/: CMakeLists.txt  README.md
apps/sample_app/src/: main.c
apps/telecommand/: CMakeLists.txt  telecommand_main.c
apps/telemetry/: CMakeLists.txt  telemetry_main.c
apps/watchdog_app/: CMakeLists.txt
apps/watchdog_app/src/: main.c
core/acl/: API.md  CMakeLists.txt  Kbuild  Kconfig  Makefile  module.mk
core/acl/include/: acl_config.h  acl_tc.h  acl_telemetry_cache.h  acl_types.h
core/acl/src/: Kconfig.api  acl_api.c  acl_api_v2.c  acl_telemetry_cache.c  module.mk
core/hal/: API.md  CMakeLists.txt  Config.in  Kbuild  Kbuild.new  Kconfig  Makefile  README.md  config.cmake  module.mk
core/hal/docs/: API_REFERENCE.md  ARCHITECTURE.md  USAGE_GUIDE.md  hal_watchdog.md
core/hal/include/: hal_can.h  hal_gpio.h  hal_i2c.h  hal_serial.h  hal_spi.h
core/hal/src/: Config.in  Kconfig.linux  Kconfig.macos  hal_error.c
core/osal/: API.md  CMakeLists.txt  Config.in  Kbuild  Kconfig  Makefile  Makefile.new  README.md  module.mk
core/osal/api/: osal_api.h  osal_atomic_api.h  osal_errno_api.h  osal_file_api.h  osal_heap_api.h  osal_log_api.h  osal_mutex_api.h  osal_rwlock_api.h  osal_semaphore_api.h  osal_shm_api.h  osal_socket_api.h  osal_string_api.h  osal_thread_api.h  osal_time_api.h  osal_types_api.h
core/osal/docs/: REFACTORING_SUMMARY.md  USAGE_GUIDE.md
core/osal/include/: osal.h  osal_flock.h  osal_platform.h  osal_types.h
core/osal/src/: Kconfig.posix  osal_crc.c
core/pcl/: CMakeLists.txt  DESIGN.md  Kbuild  Kconfig  Makefile  config.cmake  module.mk
core/pcl/docs/: API_REFERENCE.md
core/pcl/include/: pcl.h  pcl_bmc.h  pcl_common.h  pcl_hardware_interface.h  pcl_mcu.h  pcl_switch.h
core/pcl/src/: Kconfig.api  module.mk  pcl_api.c  pcl_register.c
core/pdl/: API.md  CMakeLists.txt  Config.in  Kbuild  Kconfig  Makefile  README.md  config.cmake  module.mk
core/pdl/docs/: API_REFERENCE.md  ARCHITECTURE.md  USAGE_GUIDE.md
core/pdl/include/: pdl_bmc.h  pdl_ccm.h  pdl_mcu.h  pdl_satellite.h  pdl_types.h  pdl_watchdog.h
core/pdl/src/: Kconfig.watchdog  module.mk  pdl_watchdog.c
core/test/: CMakeLists.txt  Config.in
core/test/src/: test_menu.c  test_metadata.c  test_runner.c  test_stress.c
core/utest/: CMakeLists.txt  Config.in
core/utest/src/: test_mock.c  test_registry.c  test_reporter.c
hal/: CMakeLists.txt  README.md
hal/include/: hal_can.h
hal/src/linux/: hal_can_linux.c  hal_gpio.c  hal_spi_linux.c  hal_watchdog.c  (+1 more)
kernel/pdm-core/: CMakeLists.txt  Config.in  Makefile
libs/libpmc/: CMakeLists.txt
osal/: CMakeLists.txt  README.md
osal/docs/: FILE_STRUCTURE.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_PLAN_SIMPLIFIED.md  QUICK_REFERENCE.md  README_OPTIMIZATION.md  USAGE_GUIDE.md  update_progress.sh  update_progress_simplified.sh
osal/include/: osal.h
pcl/: CMakeLists.txt  README.md
pcl/include/: pcl_common.h  pcl_config.h  pcl_fpga.h  pcl_switch.h
pcl/src/: pcl_api.c  pcl_register.c
pdl/: CMakeLists.txt  README.md
pdl/docs/: ARCHITECTURE.md
pdl/src/: pdl_watchdog.c
products/ccm/: .config.mk  CMakeLists.txt  Config.in  Kbuild  Kbuild.new  Kconfig  Makefile  README.md
products/ctest/: CMakeLists.txt  Config.in  README.md
products/pmc/: .config.mk  CMakeLists.txt  Config.in  README.md  config_defaults.mk
products/sample/: .config.mk  CMakeLists.txt  config_defaults.mk  project.py
products/tests/: CMakeLists.txt  Config.in  Kconfig  README.md  STEP7_REPORT.md
projects/pmc_h200/: CMakeLists.txt
tests/: CMakeLists.txt  Kconfig  README.md  TESTING_GUIDE.md  run_tests.sh
tests/core/: main.c  module.mk  test_menu.c  test_registry.c  test_runner.c
tests/docs/: OPTIMIZATION_PLAN.md
tests/examples/: test_parameterized_example.c
tests/include/: test_assert.h  test_core.h  test_framework.h  test_parameterized.h  test_performance.h  test_registry.h  test_stress.h  test_system.h  tests_core.h
tests/manual/: test_osal_enhancements.c
tests/pdl/: test_pdl_bmc_protocol.c
tests/performance/: CMakeLists.txt  module.mk  test_perf_core.c
tests/stress/: CMakeLists.txt  module.mk  test_stress_core.c
tests/system/: CMakeLists.txt  module.mk  test_system_core.c
tests/unit/: module.mk
tests/user/: CMakeLists.txt
(+2097 files in other folders)
