# ==============================================================================
# PDM SDK Root CMakeLists.txt
# ==============================================================================
# Clean separation of concerns:
#   - Makefile:        Configuration management (Kconfig)
#   - CMakeLists.txt:  Compilation and installation
#
# The wrapper layer provides:
#   - kconfig_loader.cmake:   Configuration loading and validation
#   - build_wrapper.cmake:    Build environment setup
#
# This keeps CMakeLists.txt focused on compilation logic only.
# ==============================================================================

cmake_minimum_required(VERSION 3.16)

# ==============================================================================
# Load Build System Wrapper Layer
# ==============================================================================

# Set SDK path
set(SDK_PATH ${CMAKE_CURRENT_LIST_DIR})

# Load wrapper modules (must be before project())
include(${SDK_PATH}/scripts/cmake/kconfig_loader.cmake)
include(${SDK_PATH}/scripts/cmake/build_wrapper.cmake)

# Initialize build wrapper (environment detection, version info, etc.)
build_wrapper_init()

# Load Kconfig configuration
kconfig_load()

# ==============================================================================
# Project Declaration
# ==============================================================================

project(pdm_sdk C ASM)

option(PDM_BUILD_TESTS "Build PDM test targets" OFF)

# ==============================================================================
# Configure Installation Paths (after project())
# ==============================================================================

build_wrapper_configure_install()

# ==============================================================================
# Build Environment Validation
# ==============================================================================

build_wrapper_validate()

# ==============================================================================
# Apply Compiler Flags from Kconfig
# ==============================================================================

include(${SDK_PATH}/scripts/cmake/compile_flags.cmake)

# Add build type definitions
if(CONFIG_BUILD_TYPE_DEBUG)
    add_definitions(-DDEBUG=1 -DRELEASE=0)
else()
    add_definitions(-DRELEASE=1 -DDEBUG=0)
endif()

# Add NDEBUG if assertions are disabled
if(NOT CONFIG_ENABLE_ASSERT)
    add_definitions(-DNDEBUG)
endif()

# Add FORTIFY_SOURCE if enabled
if(CONFIG_FORTIFY_SOURCE)
    add_definitions(-D_FORTIFY_SOURCE=2)
endif()

# ==============================================================================
# Auto-include Version Headers
# ==============================================================================

# Version header is generated by build_wrapper.cmake or Makefile
set(VERSION_H "${CMAKE_SOURCE_DIR}/include/generated/gen_version.h")
set(AUTOCONF_H "${CMAKE_SOURCE_DIR}/include/generated/gen_autoconf.h")

if(EXISTS ${VERSION_H})
    # Use add_compile_options with the full flag as a single string
    # Note: Must use SHELL: prefix to prevent CMake from splitting the argument
    add_compile_options("SHELL:-include ${VERSION_H}")
endif()

# Include autoconf header to make all CONFIG_* macros available
if(EXISTS ${AUTOCONF_H})
    add_compile_options("SHELL:-include ${AUTOCONF_H}")
endif()

# ==============================================================================
# Include Build System Modules
# ==============================================================================

include(${SDK_PATH}/scripts/cmake/compile.cmake)

# ==============================================================================
# Build Modules Directly
# ==============================================================================

function(_lpf_add_core_component config_var target_name subdir)
    if(DEFINED ${config_var} AND ${config_var} AND NOT TARGET ${target_name})
        add_subdirectory(
            ${SDK_PATH}/${subdir}
            ${CMAKE_BINARY_DIR}/${subdir}
        )
    endif()
endfunction()

if(CONFIG_OS_LINUX)
    message(STATUS "Building Linux modules")

    _lpf_add_core_component(CONFIG_OSAL osal user/osal)
    _lpf_add_core_component(CONFIG_PDM pdm kernel/pdm)
    _lpf_add_core_component(CONFIG_PDI pdi user/pdi)
    _lpf_add_core_component(CONFIG_ACONFIG aconfig user/aconfig)
endif()

add_subdirectory(${SDK_PATH}/apps ${CMAKE_BINARY_DIR}/apps)

if(PDM_BUILD_TESTS)
    enable_testing()
    add_subdirectory(${SDK_PATH}/tests ${CMAKE_BINARY_DIR}/tests)
endif()

# ==============================================================================
# Configuration Summary
# ==============================================================================

message(STATUS "")
message(STATUS "========================================================================")
message(STATUS "PDM Configuration Summary")
message(STATUS "========================================================================")
message(STATUS "SDK Version:    ${SDK_VERSION}")
message(STATUS "Git Commit:     ${GIT_COMMIT_HASH}")
message(STATUS "Build Type:     ${CMAKE_BUILD_TYPE}")
message(STATUS "Install Prefix: ${CMAKE_INSTALL_PREFIX}")
message(STATUS "")
message(STATUS "Core Modules:")
message(STATUS "  Linux target:  ${CONFIG_OS_LINUX}")
message(STATUS "  OSAL:         ${CONFIG_OSAL}")
message(STATUS "  PDM Core:     ${CONFIG_PDM}")
message(STATUS "  PDI:          ${CONFIG_PDI}")
message(STATUS "  ACONFIG:      ${CONFIG_ACONFIG}")
message(STATUS "========================================================================")
message(STATUS "")

# Optional: Print detailed Kconfig summary (for debugging)
if(DEFINED ENV{VERBOSE_CONFIG})
    kconfig_print_summary()
endif()
